fix sizing and spacing of button for custom pages

--- a/web/src/styles/customer/lens.css
+++ b/web/src/styles/customer/lens.css
@@ -4,7 +4,7 @@
  * The "Lens Bogota" pack and puzzle pages
  */
 
- .pack--lens-bogota-pack,
+.pack--lens-bogota-pack,
 .puzzle--lenster-bogota,
 .puzzle--lenstube-bogota,
 .puzzle--lensta-bogota {
@@ -16,13 +16,13 @@
   --lens-black: #212322;
   --lens-coolgrey: #fcfcfc;
 
-  @apply bg-no-repeat bg-cover bg-center;
+  @apply bg-cover bg-center bg-no-repeat;
   background-color: var(--lens-basil);
 
   /* This is a div that's usually hidden in the page*/
   .pack__image-anchor {
-    @apply mt-20 inline-block w-96 h-40 bg-no-repeat bg-center;
-    background-image: url("web/public/customer/lens/lens_logo_white.svg");
+    @apply mt-20 inline-block h-40 w-96 bg-center bg-no-repeat;
+    background-image: url('web/public/customer/lens/lens_logo_white.svg');
   }
 
   /* Text right below logo from above */
@@ -39,7 +39,7 @@
   .pack__main,
   .puzzle__main {
     .ik-button {
-      @apply h-20 text-2xl px-10 rounded-full min-w-0;
+      @apply flex h-20 min-w-0 items-center justify-center rounded-full px-10 text-2xl;
       color: var(--lens-basil);
       background: var(--lens-peas);
       border-color: var(--lens-lime);
@@ -48,7 +48,7 @@
 
   /* You know what this is */
   .social-share {
-    @apply px-6 py-2 uppercase text-lg rounded-full bg-transparent border-2 border-solid;
+    @apply rounded-full border-2 border-solid bg-transparent px-6 py-2 text-lg uppercase;
     color: var(--lens-basil);
     background: var(--lens-peas);
     border-color: var(--lens-lime);
