--- a/web/src/styles/customer/saga.css
+++ b/web/src/styles/customer/saga.css
@@ -35,7 +35,7 @@
   .pack__main,
   .puzzle__main {
     .ik-button {
-      @apply h-20 min-w-0 rounded-full px-10 text-2xl;
+      @apply flex h-20 min-w-0 items-center justify-center rounded-full px-10 text-2xl;
       color: var(--saga-button-text);
       background: var(--saga-button-color);
       border-color: var(--saga-button-text);
